Migrate backend from MongoDB to PostgreSQL, fix Flutter categories UI, restructure as monorepo